--- a/src/blog/2022-04-05-Notification-permissions-android-13.mdx
+++ b/src/blog/2022-04-05-Notification-permissions-android-13.mdx
@@ -5,7 +5,7 @@ date: 2022-04-05 21:30 +1100
 categories: 'blog'
 ---
 
-import notificationPermissions from './images/notification_permissions.mp4';
+import notificationPermissions from './images/notification_permissions.webm';
 import android13Icons from './images/android_13_icons.png'
 
 # Android 13 Preview 2
