--- a/src/blog/2017-03-31-Privacy-Policy-StrayaMate.mdx
+++ b/src/blog/2017-03-31-Privacy-Policy-StrayaMate.mdx
@@ -9,9 +9,13 @@ categories: post
 <br/>
 <br/>
 
+# This privacy policy was amended on 20 June 2022
+
 By using  this app, the user agrees to abide by the privacy policy as described below.
 
-This app does not collect, store or transmit any application or user data from the user's device to anywhere external to the device. The app also doesn't request any permissions to collect, store or transmit any application or user data at this stage, however in the future usage data may be recorded anonymously to ensure performance metrics are met.
+This app collects crash log information and analytics within the app to measure app performance and ensure features work well. This information does not identify the user or use any personalised information.
+
+This app does not collect, store or transmit any other application or user data from the user's device to anywhere external to the device. The app also doesn't request any permissions to collect, store or transmit any application or user data at this stage, however in the future usage data may be recorded anonymously to ensure performance metrics are met.
 
 In the event this functionality does get enabled, this particular privacy policy will be update to reflect it.
 
